- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    5.15.15, 6.6.0, 6.8.0
 
- 
        
 - 
        5d95aaffd (dev), 1b61c1938 (dev), eb428fb02 (6.8), 50bd3058f (6.8), 8b5681960 (tqtc/lts-6.5), b1841d441 (tqtc/lts-6.5), 4b85ea25b (tqtc/lts-5.15)
 
Binding is not restored after switching enabled to false value for Timeline component.
The documentations says:
When the timeline is disabled, all items will have their regular values.
But if the regular value is bindings, the timeline will not restore it and it will no longer work
In my example there are 2 buttons:
1.Timeline enabled true/false
2.Changes the offset value for center rectangle 
If you change the offset value before the timeline is switched to enabled = true, everything works fine, 
but if you switch the Timeline to enabled = true and enabled = false and after that will changing the offset value, you won't get any results
Example attached
| For Gerrit Dashboard: QTBUG-122812 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 553722,7 | Restore original bindings when disabled | dev | qt/qtquicktimeline | Status: MERGED | +2 | 0 | 
| 584542,5 | test: A Test for restoring original bindings | dev | qt/qtquicktimeline | Status: MERGED | +2 | 0 | 
| 601603,2 | Restore original bindings when disabled | 6.8 | qt/qtquicktimeline | Status: MERGED | +2 | 0 | 
| 601618,2 | test: A Test for restoring original bindings | 6.8 | qt/qtquicktimeline | Status: MERGED | +2 | 0 | 
| 601673,2 | test: A Test for restoring original bindings | tqtc/lts-6.5 | qt/tqtc-qtquicktimeline | Status: MERGED | +2 | 0 | 
| 601674,2 | Restore original bindings when disabled | tqtc/lts-6.5 | qt/tqtc-qtquicktimeline | Status: MERGED | +2 | 0 | 
| 602769,2 | Restore original bindings when disabled | tqtc/lts-5.15 | qt/tqtc-qtquicktimeline | Status: MERGED | +2 | +1 |