Restore original bindings when disabled

Timeline replaces existing property bindings when enabled.
This patch will store the original bindings and restore them
when Timeline disabled.

Fixes: QTBUG-122812
Change-Id: Icf012489bd9f71fffb3df698fc95c32a80a3368d
(cherry picked from commit b6c427a3f09dc066e64d6c52dded82fcf2d74b10)
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>